@@ -340,3 +340,6 @@ Changes since Asterisk 1.2:
     * New manager events:
          1. OriginateResponse event comes to replace OriginateSuccess and OriginateFailure
     * iLBC source code no longer included (see UPGRADE.txt for details)
+	* New CLI command "pri show version" that shows the current version of libpri
+	  that the library was built against (requires a version of libpri since this API
+	  feature was added).
